--- a/src/constants/locales/ua.json
+++ b/src/constants/locales/ua.json
@@ -2,22 +2,29 @@
   "translation": {
     "home": {
       "search": "Пошук",
-      "recentSearch": "Недавній пошук",
-      "favorites": "Обрані"
+      "recentSearch": "Недавні",
+      "favorites": "Улюблені"
     },
     "favorites": {
-      "removeFrom": "Видалити з вибраного",
-      "addTo": "Додати до вибраного"
+      "removeFrom": "Видалити з улюблених",
+      "addTo": "Додати до улюблених",
+      "emptyTitle": "Ще немає улюблених",
+      "emptyBody": "Коли ви додасте улюблені, вони з'являться тут",
+      "limitError": "Ви досягли ліміту улюблених"
     },
     "user": {
-      "followers": "фоловерів",
-      "following": "слідую",
+      "followers": "підписники",
+      "following": "підписки",
       "userIsPrivate": "Користувач приватний",
-      "tapToRefetch": "Торкніться, щоб переглянути"
+      "tapToRefetch": "Торкніться, щоб оновити"
+    },
+    "navigation": {
+      "profile": "Перейти до профілю",
+      "close": "Закрити"
     },
     "common": {
       "loading": "Завантаження...",
-      "noFavoritesUsers": "Немає обраних користувачів.",
+      "noFavoritesUsers": "Немає улюблених користувачів.",
       "storiesNotFound": "Історії не знайдено.",
       "manage": "Керувати",
       "stories": "Історії",
@@ -25,8 +32,8 @@
       "noDataAvailable": "Немає даних.",
       "loadingStories": "Завантаження історій",
       "areUSure": "Ви впевнені?",
-      "userAddedToFavorites": "Користувач доданий до вибраного",
-      "highlights": "Основні моменти",
+      "userAddedToFavorites": "Користувач доданий до улюблених",
+      "highlights": "Хайлайти",
       "recentActivity": "Остання активність"
     }
   }
