--- a/src/constants/locales/ru.json
+++ b/src/constants/locales/ru.json
@@ -2,32 +2,39 @@
   "translation": {
     "home": {
       "search": "Поиск",
-      "recentSearch": "Недавний поиск",
+      "recentSearch": "Последний поиск",
       "favorites": "Избранное"
     },
     "favorites": {
       "removeFrom": "Удалить из избранного",
-      "addTo": "Добавить в избранное"
+      "addTo": "Добавить в избранное",
+      "emptyTitle": "Еще нет избранных",
+      "emptyBody": "Когда вы добавите избранные, они появятся здесь",
+      "limitError": "Вы достигли лимита избранных"
     },
     "user": {
-      "followers": "последователи",
-      "following": "следующий",
-      "userIsPrivate": "Пользователь является частным",
+      "followers": "подписчики",
+      "following": "подписки",
+      "userIsPrivate": "Пользователь закрыт",
       "tapToRefetch": "Нажмите, чтобы обновить"
+    },
+    "navigation": {
+      "profile": "Перейти в профиль",
+      "close": "Закрыть"
     },
     "common": {
       "loading": "Загрузка...",
       "noFavoritesUsers": "Нет избранных пользователей.",
       "storiesNotFound": "Истории не найдены.",
-      "manage": "Управлять",
+      "manage": "Управление",
       "stories": "Истории",
       "error": "Ошибка",
-      "noDataAvailable": "Нет доступных данных.",
+      "noDataAvailable": "Данные отсутствуют.",
       "loadingStories": "Загрузка историй",
-      "areUSure": "Ты уверен?",
+      "areUSure": "Вы уверены?",
       "userAddedToFavorites": "Пользователь добавлен в избранное",
-      "highlights": "Основные моменты",
-      "recentActivity": "Недавняя активность"
+      "highlights": "Хайлайты",
+      "recentActivity": "Последняя активность"
     }
   }
 }
