--- a/src/constants/locales/ru.json
+++ b/src/constants/locales/ru.json
@@ -23,6 +23,7 @@
       "close": "Закрыть"
     },
     "common": {
+      "clearAll": "Очистить все",
       "loading": "Загрузка...",
       "noFavoritesUsers": "Нет избранных пользователей.",
       "storiesNotFound": "Истории не найдены.",
