--- a/src/constants/locales/ua.json
+++ b/src/constants/locales/ua.json
@@ -23,6 +23,7 @@
       "close": "Закрити"
     },
     "common": {
+      "clearAll": "Очистити всі",
       "loading": "Завантаження...",
       "noFavoritesUsers": "Немає улюблених користувачів.",
       "storiesNotFound": "Історії не знайдено.",
