--- a/src/constants/locales/ua.json
+++ b/src/constants/locales/ua.json
@@ -20,7 +20,77 @@
     },
     "navigation": {
       "profile": "Перейти до профілю",
-      "close": "Закрити"
+      "close": "Закрити",
+      "notifications": "Сповіщення",
+      "subscription": "Stories Viewer Premium"
+    },
+    "subscription": {
+      "title": "Преміум-підписка",
+      "subtitle": "Розблокуйте ексклюзивні функції та покращте свій досвід",
+      "mainButton": "Підписатися",
+      "subscription-item": {
+        "title": "Місячна підписка",
+        "subtitle": "Преміум-доступ",
+        "month": "міс"
+      },
+      "include": "Що включено",
+      "features": {
+        "notifications": {
+          "title": "Сповіщення",
+          "description": "Залишайтесь на зв’язку та в курсі подій завдяки нашій функції сповіщень."
+        },
+        "increasedUsage": {
+          "title": "Розширені ліміти використання",
+          "description": "Розширте свої можливості, додавши до 25 улюблених акаунтів та одночасно відстежуючи 4 акаунти."
+        },
+        "adFree": {
+          "title": "Без реклами",
+          "description": "Преміум-користувачі можуть насолоджуватися роботою з ботом без реклами."
+        }
+      }
+    },
+    "subscriptionPaid": {
+      "title": "Підписка оформлена!",
+      "subtitle": "Дякуємо за підписку!",
+      "subtitle-2": "Ми раді, що ви з нами.",
+      "subEnd": "Ваша підписка закінчується",
+      "contact": "Потрібна допомога? Зв'яжіться з нами за адресою"
+    },
+    "notifications": {
+      "title": "Налаштуйте відстеження",
+      "notSubTip": "Підпишіться, щоб збільшити ліміт сповіщень",
+      "limitSection": {
+        "title": "Ліміт акаунтів",
+        "subtitle": "До",
+        "four": "4",
+        "one": "1",
+        "notifications": "сповіщень"
+      },
+      "noFavorites": {
+        "title": "Немає улюблених акаунтів",
+        "subtitle": "Вам потрібні улюблені акаунти, щоб почати відстеження"
+      }
+    },
+    "notificationsPaid": {
+      "title": "Відстежувані акаунти",
+      "notSubTip": "Керуйте налаштуваннями сповіщень",
+      "settings": {
+        "title": "Налаштування",
+        "frequency": "Частота"
+      },
+      "tracking": {
+        "section": "Відстежувані акаунти",
+        "title": "Обмеження акаунтів",
+        "subtitle": "Підпишіться, щоб збільшити ліміт"
+      },
+      "getPremium": "Отримати преміум-підписку",
+      "removeTracking": "Видалити відстеження"
+    },
+    "recentUsers": {
+      "noRecentUsers": {
+        "title": "Немає недавніх користувачів",
+        "subtitle": "Почніть пошук, щоб переглядати сторіс анонімно"
+      }
     },
     "common": {
       "clearAll": "Очистити всі",
@@ -35,7 +105,13 @@
       "areUSure": "Ви впевнені?",
       "userAddedToFavorites": "Користувач доданий до улюблених",
       "highlights": "Хайлайти",
-      "recentActivity": "Остання активність"
+      "recentActivity": "Остання активність",
+      "updating": "Оновлення",
+      "close": "Закрити",
+      "remove": "Видалити",
+      "add": "Додати",
+      "found": "Знайдено",
+      "profile": "Профіль"
     }
   }
 }
