--- a/src/constants/locales/ua.json
+++ b/src/constants/locales/ua.json
@@ -54,7 +54,8 @@
       "subtitle": "Дякуємо за підписку!",
       "subtitle-2": "Ми раді, що ви з нами.",
       "subEnd": "Ваша підписка закінчується",
-      "contact": "Потрібна допомога? Зв'яжіться з нами за адресою"
+      "contact": "Потрібна допомога? Зв'яжіться з нами за адресою",
+      "cancelSubscription": "Скасувати підписку можна будь-коли в налаштуваннях Telegram"
     },
     "notifications": {
       "title": "Налаштуйте відстеження",
