--- a/src/constants/locales/ru.json
+++ b/src/constants/locales/ru.json
@@ -54,7 +54,8 @@
       "subtitle": "Спасибо за подписку!",
       "subtitle-2": "Мы рады, что вы с нами.",
       "subEnd": "Ваша подписка заканчивается",
-      "contact": "Нужна помощь? Свяжитесь с нами по адресу"
+      "contact": "Нужна помощь? Свяжитесь с нами по адресу",
+      "cancelSubscription": "Отменить подписку можно в любое время в настройках Telegram"
     },
     "notifications": {
       "title": "Настройте аккаунты для отслеживания",
