--- a/src/constants/locales/en.json
+++ b/src/constants/locales/en.json
@@ -69,7 +69,7 @@
       "subtitle": "Thank you for subscribing!",
       "subtitle-2": "We’re excited to have you on board.",
       "subEnd": "Your subscription ends on",
-      "contact": "Need help? Contact us at",
+      "contact": "Contact us at",
       "cancelSubscription": "Cancel subscription anytime in Telegram settings"
     },
     "notificationsPaid": {
